updated breadcrumbs to prevent layout bug on focus

--- a/less/uw.accessibility.less
+++ b/less/uw.accessibility.less
@@ -56,4 +56,10 @@ label.screen-reader {
     a.uw-btn:focus {
         text-decoration: underline;
     }
+    .uw-breadcrumbs {
+        a:focus {
+            border-bottom: none;
+            text-decoration: underline;
+        }
+    }
 }
